--- a/index.html
+++ b/index.html
@@ -68,16 +68,16 @@ _   _       _                    _ _
                      <div class="collapse navbar-collapse" id="navbarNavDropdown">
                         <ul class="navbar-nav ml-auto">
                            <li class="nav-item">
-                              <a class="nav-link" href="#">Əsas səhifə</a>
+                              <a class="nav-link" href="index.html">Əsas səhifə</a>
                            </li>
                            <li class="nav-item">
-                              <a class="nav-link" href="pages/news.html">Haqqımızda</a>
+                              <a class="nav-link" href="pages/xevent/about.html">Haqqımızda</a>
                            </li>
                            <li class="nav-item">
                               <a class="nav-link" href="pages/xevent/about.html">Xəbərlər</a>
                            </li>
                            <li class="nav-item">
-                              <a class="nav-link" href="pages/events.html">Tədbirlər</a>
+                              <a class="nav-link" href="events.html">Tədbirlər</a>
                            </li>
                            <li class="nav-item">
                               <a class="nav-link" href="pages/student.html">Student's Cv</a>
@@ -112,9 +112,9 @@ _   _       _                    _ _
     <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
     <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
     <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
     <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
     <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="6"></li>
   </ol>
   <div class="carousel-inner" style="width: 100%;padding-top:100px;">
     <div class="carousel-item active">
