--- a/pages/academics.html
+++ b/pages/academics.html
@@ -73,7 +73,7 @@ _   _       _                    _ _
                               <a class="nav-link" href="../pages/news/index.html">Xəbərlər</a>
                            </li>
                            <li class="nav-item">
-                              <a class="nav-link" href="../pages/news.html">Tədbirlər</a>
+                              <a class="nav-link" href="../../events.html">Tədbirlər</a>
                            </li>
                            <li class="nav-item">
                               <a class="nav-link" href="../pages/student.html">Student's Cv</a>
