--- a/pages/contact.html
+++ b/pages/contact.html
@@ -84,7 +84,7 @@ _   _       _                    _ _
                               <a class="nav-link" href="../pages/news/index.html">Xəbərlər</a>
                            </li>
                            <li class="nav-item">
-                              <a class="nav-link" href="#">Tədbirlər</a>
+                              <a class="nav-link" href="../../events.html">Tədbirlər</a>
                            </li>
                            <li class="nav-item">
                               <a class="nav-link" href="student.html">Student's Cv</a>
@@ -498,6 +498,6 @@ _   _       _                    _ _
       childNode: ".item",
       childWrapper: ".item-wrap"
       });
+   </script>
 
-</body>
-</html>
+
