--- a/pages/cv/index.html
+++ b/pages/cv/index.html
@@ -54,13 +54,13 @@
                               <a class="nav-link" href="../../index.html">Əsas səhifə</a>
                            </li>
                            <li class="nav-item">
-                              <a class="nav-link" href="../news.html">Haqqımızda</a>
+                              <a class="nav-link" href="../xevent/about.html">Haqqımızda</a>
                            </li>
                            <li class="nav-item">
                               <a class="nav-link" href="../news/index.html">Xəbərlər</a>
                            </li>
                            <li class="nav-item">
-                              <a class="nav-link" href="../events.html">Tədbirlər</a>
+                              <a class="nav-link" href="../../events.html">Tədbirlər</a>
                            </li>
                            <li class="nav-item">
                               <a class="nav-link" href="../student.html">Student's Cv</a>
