--- a/pages/a-profile.html
+++ b/pages/a-profile.html
@@ -75,7 +75,7 @@ _   _       _                    _ _
                               <a class="nav-link" href="../pages/news/index.html">Xəbərlər</a>
                            </li>
                            <li class="nav-item">
-                              <a class="nav-link" href="news.html">Tədbirlər</a>
+                              <a class="nav-link" href="../../events.html">Tədbirlər</a>
                            </li>
                            <li class="nav-item">
                               <a class="nav-link" href="student.html">Student's Cv</a>
