--- a/pages/xevent/index.html
+++ b/pages/xevent/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title></title>
+    <title>IKT</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
@@ -50,13 +50,13 @@
                               <a class="nav-link" href="../../index.html">Əsas səhifə</a>
                            </li>
                            <li class="nav-item">
-                              <a class="nav-link" href="../news.html">Haqqımızda</a>
+                              <a class="nav-link" href="about.html">Haqqımızda</a>
                            </li>
                            <li class="nav-item">
                               <a class="nav-link" href="../news/index.html">Xəbərlər</a>
                            </li>
                            <li class="nav-item">
-                              <a class="nav-link" href="../news.html">Tədbirlər</a>
+                              <a class="nav-link" href="../../events.html">Tədbirlər</a>
                            </li>
                            <li class="nav-item">
                               <a class="nav-link" href="../student.html">Student's Cv</a>
