--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
    <link rel="stylesheet" href="q-images/ikt/beu/css/style.css">
    <!-- Responsive CSS -->
    <link rel="stylesheet" href="q-images/ikt/beu/css/responsive.css">
+   <style>
+     
+   </style>
 </head>
 
 <body>
@@ -103,36 +106,36 @@ _   _       _                    _ _
    </header>
 
 
-   <div class="row " style="width: 101.5%; height: 900px;">
-      <div class="col-md-12 col-sm-12 col-lg-12 " style="margin-top: 100px;">
+   <div class="row ">
+      <div class="col-md-12 my-5" style="margin-left:-3px;">
 
-         <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-            <ol class="carousel-indicators">
-               <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-               <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-               <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-               <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
-               <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
-               <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
+         <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" >
+            <ol class="carousel-indicators" >
+               <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active" style="margin-top: -50px;"></li>
+               <li data-target="#carouselExampleIndicators" data-slide-to="1" style="margin-top: -50px;"></li>
+               <li data-target="#carouselExampleIndicators" data-slide-to="2" style="margin-top: -50px;"></li>
+               <li data-target="#carouselExampleIndicators" data-slide-to="3" style="margin-top: -50px;"></li>
+               <li data-target="#carouselExampleIndicators" data-slide-to="4" style="margin-top: -50px;"></li>
+               <li data-target="#carouselExampleIndicators" data-slide-to="5" style="margin-top: -50px;"></li>
             </ol>
             <div class="carousel-inner">
                <div class="carousel-item active">
-                  <img class="d-block w-100" src="carousel-img/1.jpg" alt="First slide">
+                  <img class="d-block w-100" src="carousel-img/1.jpg" alt="First slide" >
                </div>
                <div class="carousel-item">
-                  <img class="d-block w-100" src="carousel-img/2_1.jpg" alt="Second slide">
+                  <img class="d-block w-100" src="carousel-img/2_1.jpg" alt="Second slide" >
                </div>
                <div class="carousel-item">
-                  <img class="d-block w-100" src="carousel-img/2.jpg" alt="Third slide">
+                  <img class="d-block w-100" src="carousel-img/2.jpg" alt="Third slide" >
                </div>
                <div class="carousel-item">
-                  <img class="d-block w-100" src="carousel-img/3.jpg" alt="Fourth slide">
+                  <img class="d-block w-100" src="carousel-img/3.jpg" alt="Fourth slide" >
                </div>
                <div class="carousel-item">
-                  <img class="d-block w-100" src="carousel-img/4_1.jpg" alt="Fiveth slide">
+                  <img class="d-block w-100" src="carousel-img/4_1.jpg" alt="Fiveth slide" >
                </div>
                <div class="carousel-item">
-                  <img class="d-block w-100" src="carousel-img/lab.jpg" alt="Sixth slide">
+                  <img class="d-block w-100" src="carousel-img/lab.jpg" alt="Sixth slide" >
                </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -172,7 +175,7 @@ _   _       _                    _ _
 
       <!-- our-client End -->
       <!-- Homepages Demo Start -->
-      <section class="position-relative overview-block-pt home-page" id="demos">
+      <section class="position-relative overview-block-pt home-page" id="demos" style="margin-top: -50px;">
          <div class="container">
             <div class="row">
                <div class="col-md-12">
@@ -264,7 +267,7 @@ _   _       _                    _ _
                      <div class="promo-carousel" id="grouploop-1">
                         <div class="item-wrap">
                            <div class="item active">
-                              <a href="#"><img src="q-images/ikt/beu/images/home/inner-page/01.jpg" alt=""></a>
+                              <a href="#"><img src="q-images/ikt/beu/images/home/inner-page/01.jpg" alt="" ></a>
                            </div>
                            <div class="item">
                               <a href="#"><img src="q-images/ikt/beu/images/home/inner-page/02.jpg" alt=""></a>
@@ -313,7 +316,7 @@ _   _       _                    _ _
          <section>
             <div class="row " style="margin-top: 100px;">
                <div class="col-md-6">
-                  <div class="title-box text-left" style="padding-left: 30px;">
+                  <div class="title-box text-left" style="padding-left: 10px;">
                      <h3>IKT</h3>
                      <p>Bakı Mühəndislik Universiteti İnformasiya və Kommunikasiya Texnologiyaları Laboratoriyası,
                         and sell them on CodeCanyon as stand alone plugins. VC offers the most comprehensive list of
@@ -324,7 +327,7 @@ _   _       _                    _ _
                   </div>
                </div>
 
-               <div class="col-md-6" style="text-align: center; ">
+               <div class="col-md-6" style="text-align: center; margin-top: -70px;">
 
                   <img src="q-images/ikt/beu/images/home/inner-page/programmer.gif" alt="" width="80%">
                </div>
@@ -510,7 +513,8 @@ _   _       _                    _ _
 
                #container {
                   width: 50%;
-               }
+                  
+               }  
             }
          </style>
 
