--- a/events.html
+++ b/events.html
@@ -113,7 +113,7 @@ _   _       _                    _ _
                <div class="row">
 
 <!-- ------------- -->
-<div class="col-lg-3  col-md-6 mb-5 text-center">
+                <div class=" col-md-3 mb-5 text-center mt-4">
 <a href="#">
                      <div class="box">
                         <div class="home-block">
@@ -130,7 +130,7 @@ _   _       _                    _ _
                   </div>
 <!-- --------------->
 <!-- ------------- -->
-<div class="col-lg-3  col-md-6 mb-5 text-center">
+<div class=" col-md-3 mb-5 text-center mt-4">
 <a href="#">
                      <div class="box">
                         <div class="home-block">
@@ -147,7 +147,7 @@ _   _       _                    _ _
                   </div>
 <!-- --------------->
 <!-- ------------- -->
-<div class="col-lg-3  col-md-6 mb-5 text-center">
+<div class=" col-md-3 mb-5 text-center mt-4">
 <a href="#">
                      <div class="box">
                         <div class="home-block">
@@ -164,7 +164,7 @@ _   _       _                    _ _
                   </div>
 <!-- --------------->
 <!-- ------------- -->
-<div class="col-lg-3  col-md-6 mb-5 text-center">
+<div class=" col-md-3 mb-5 text-center mt-4">
 <a href="#">
                      <div class="box">
                         <div class="home-block">
@@ -178,10 +178,14 @@ _   _       _                    _ _
                         </div>
                      </div>
  </a>
+                  </div>
                   </div>
 <!-- --------------->
 <!-- ------------- -->
-<div class="col-lg-3  col-md-6 mb-5 text-center">
+<div class="row">
+
+
+<div class=" col-md-3 mb-5 text-center mt-4">
 <a href="#">
                      <div class="box">
                         <div class="home-block">
@@ -196,6 +200,51 @@ _   _       _                    _ _
                      </div>
  </a>
                   </div>
+                  <div class=" col-md-3 mb-5 text-center mt-4">
+                     <a href="#">
+                                          <div class="box">
+                                             <div class="home-block">
+                                                <img class="img-fluid" src="../q-images/ikt/beu/images/home/02.jpg" alt="images">
+                                                <div class="hover-effect">
+                                                   <img src="../q-images/ikt/beu/images/home/a2.png" class="img-fluid hover-img" alt="#">
+                                                </div>
+                                             </div>
+                                             <div class="btn-home">
+                                                <a class="button white-btn" href="xevent/index.html">Ətraflı</a>
+                                             </div>
+                                          </div>
+                      </a>
+                                       </div>
+                                       <div class=" col-md-3 mb-5 text-center mt-4">
+                                          <a href="#">
+                                                               <div class="box">
+                                                                  <div class="home-block">
+                                                                     <img class="img-fluid" src="../q-images/ikt/beu/images/home/02.jpg" alt="images">
+                                                                     <div class="hover-effect">
+                                                                        <img src="../q-images/ikt/beu/images/home/a2.png" class="img-fluid hover-img" alt="#">
+                                                                     </div>
+                                                                  </div>
+                                                                  <div class="btn-home">
+                                                                     <a class="button white-btn" href="xevent/index.html">Ətraflı</a>
+                                                                  </div>
+                                                               </div>
+                                           </a>
+                                                            </div>
+                                                            <div class=" col-md-3 mb-5 text-center mt-4">
+                                                               <a href="#">
+                                                                                    <div class="box">
+                                                                                       <div class="home-block">
+                                                                                          <img class="img-fluid" src="../q-images/ikt/beu/images/home/02.jpg" alt="images">
+                                                                                          <div class="hover-effect">
+                                                                                             <img src="../q-images/ikt/beu/images/home/a2.png" class="img-fluid hover-img" alt="#">
+                                                                                          </div>
+                                                                                       </div>
+                                                                                       <div class="btn-home">
+                                                                                          <a class="button white-btn" href="xevent/index.html">Ətraflı</a>
+                                                                                       </div>
+                                                                                    </div>
+                                                                </a>
+                                                                                 </div>
 <!-- --------------->
 
                </div>
