--- a/index.html
+++ b/index.html
@@ -357,12 +357,12 @@ _   _       _                    _ _
          <section class="our-clients  black-bg">
             <div class="container">
                <div class="row">
-                  <div class="col-sm-12">
+                  <div class="col-md-12">
                      <div class="title-box title-white text-center">
                         <h3 class="subtitle text-white">Əməkdaşlarımız</h3>
                      </div>
                   </div>
-                  <div class="col-sm-12">
+                  <div class="col-md-12">
                      <div class="owl-carousel" data-autoplay="true" data-loop="true" data-nav="false" data-dots="false"
                         data-items="4" data-items-laptop="3" data-items-tab="3" data-items-mobile="2"
                         data-items-mobile-sm="1" data-margin="30">
