--- a/pages/student.html
+++ b/pages/student.html
@@ -111,7 +111,7 @@ _   _       _                    _ _
                   </div>
                </div>
                <div class="row">
-                  <div class="col-lg-3 col-md-6 text-center wow fadeInUp" data-wow-duration="0.5s">
+                  <div class="col-md-3 text-center" data-wow-duration="0.5s">
                      <div class="iq-fancy-box text-center">
                         <div class="iq-icon">
                           <a href="cv/index.html"><img src="../imagesofacademics/boss.jpg" alt=""></a>
@@ -122,7 +122,7 @@ _   _       _                    _ _
                         </div>
                      </div>
                   </div>
-                  <div class="col-lg-3 col-md-6 text-center wow fadeInUp" data-wow-duration="0.5s">
+                  <div class="col-md-3 text-center" data-wow-duration="0.5s">
                      <div class="iq-fancy-box text-center">
                         <div class="iq-icon">
                             <a href="cv/index.html"><img src="../imagesofacademics/boss.jpg" alt=""></a>
@@ -133,7 +133,7 @@ _   _       _                    _ _
                         </div>
                      </div>
                   </div>
-                  <div class="col-lg-3 col-md-6 text-center wow fadeInUp" data-wow-duration="0.5s">
+                  <div class="col-md-3 text-center" data-wow-duration="0.5s">
                      <div class="iq-fancy-box text-center">
                         <div class="iq-icon">
                            <a href="cv/index.html"><img src="../imagesofacademics/boss.jpg" alt=""></a>
@@ -144,7 +144,7 @@ _   _       _                    _ _
                         </div>
                      </div>
                   </div>
-                  <div class="col-lg-3 col-md-6 text-center wow fadeInUp" data-wow-duration="0.5s">
+                  <div class="col-md-3 text-center" data-wow-duration="0.5s">
                      <div class="iq-fancy-box text-center">
                         <div class="iq-icon">
                            <a href="cv/index.html"><img src="../imagesofacademics/boss.jpg" alt=""></a>
