--- a/pages/a-profile.html
+++ b/pages/a-profile.html
@@ -72,10 +72,10 @@ _   _       _                    _ _
                               <a class="nav-link" href="xevent/about.html">Haqqımızda</a>
                            </li>
                            <li class="nav-item">
-                              <a class="nav-link" href="../pages/news/index.html">Xəbərlər</a>
+                              <a class="nav-link" href="news/index.html">Xəbərlər</a>
                            </li>
                            <li class="nav-item">
-                              <a class="nav-link" href="../../events.html">Tədbirlər</a>
+                              <a class="nav-link" href="events.html">Tədbirlər</a>
                            </li>
                            <li class="nav-item">
                               <a class="nav-link" href="student.html">Student's Cv</a>
