--- a/pages/events.html
+++ b/pages/events.html
@@ -67,19 +67,19 @@ _   _       _                    _ _
                               <a class="nav-link" href="../index.html">Əsas səhifə</a>
                            </li>
                            <li class="nav-item">
-                              <a class="nav-link" href="pages/xevent/about.html">Haqqımızda</a>
+                              <a class="nav-link" href="xevent/about.html">Haqqımızda</a>
                            </li>
                            <li class="nav-item">
-                              <a class="nav-link" href="../pages/news/index.html">Xəbərlər</a>
+                              <a class="nav-link" href="news/index.html">Xəbərlər</a>
                            </li>
                            <li class="nav-item">
                               <a class="nav-link" href="events.html">Tədbirlər</a>
                            </li>
                            <li class="nav-item">
-                              <a class="nav-link" href="../pages/student.html">Student's Cv</a>
+                              <a class="nav-link" href="student.html">Student's Cv</a>
                            </li>
                            <li class="nav-item">
-                              <a class="nav-link" href="../pages/academics.html">Academics</a>
+                              <a class="nav-link" href="academics.html">Academics</a>
                            </li>
 
                         </ul>
@@ -88,7 +88,7 @@ _   _       _                    _ _
                </div>
                <div class="col-lg-2 text-right">
                   <div class="btn-purchase ">
-                     <a href="pages/contact.html" class="button white-btn shadow">Bizimlə Əlaqə</a>
+                     <a href="contact.html" class="button white-btn shadow">Bizimlə Əlaqə</a>
                   </div>
                </div>
             </div>
