--- a/pages/student.html
+++ b/pages/student.html
@@ -70,16 +70,16 @@ _   _       _                    _ _
                               <a class="nav-link" href="xevent/about.html">Haqqımızda</a>
                            </li>
                            <li class="nav-item">
-                              <a class="nav-link" href="../pages/news/index.html">Xəbərlər</a>
+                              <a class="nav-link" href="news/index.html">Xəbərlər</a>
                            </li>
                            <li class="nav-item">
-                              <a class="nav-link" href="../../events.html">Tədbirlər</a>
+                              <a class="nav-link" href="events.html">Tədbirlər</a>
                            </li>
                            <li class="nav-item">
-                              <a class="nav-link" href="../pages/student.html">Student's Cv</a>
+                              <a class="nav-link" href="student.html">Student's Cv</a>
                            </li>
                            <li class="nav-item">
-                              <a class="nav-link" href="../pages/academics.html">Academics</a>
+                              <a class="nav-link" href="academics.html">Academics</a>
                            </li>
 
                         </ul>
